--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
+# vim
 *.swp
+
+# emacs
 *~
+
+# lein
 pom.xml
 *jar
 /lib/
@@ -8,3 +13,6 @@ pom.xml
 /target/
 .lein-deps-sum
 .lein-repl-history
+
+# Mac OS X
+.DS_Store
